# darb-solar

./: .gcloudignore  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: requirements.txt  streamlit_app.py
launchd/: com.darb-solar.intraday.plist
notebooks/: fusionsolar_api.ipynb
scripts/: bootstrap_plant.py  deploy_cloudrun_intraday.sh  export_cloudrun_requirements.sh  export_streamlit_requirements.sh  setup_native_postgres.sh  setup_native_postgres.sql  setup_schema.sql  sync_fusionsolar_history.py  sync_fusionsolar_intraday.py
src/darb_solar/: __init__.py  env.py  fusionsolar.py  time.py
src/darb_solar/db/: __init__.py  connection.py  models.py  reads.py  schema.py  sql.py  time.py  types.py  writes.py
src/darb_solar/history_sync/: __init__.py  api.py  checkpoints.py  session.py  sync.py  types.py
src/darb_solar/intraday_sync/: __init__.py  sync.py
src/darb_solar/viz/: __init__.py  daily.py
