 [project]
 name = "darb-solar"
 version = "0.1.0"
 description = "Minimal darb-solar package."
 readme = "README.md"
 requires-python = ">=3.11"
dependencies = [
  "loguru",
  "matplotlib",
  "pandas",
  "plotly>=6.8.0",
  "psycopg[binary]",
  "python-dotenv",
  "requests",
  "sqlalchemy>=2.0",
  "streamlit>=1.58.0",
]

 [dependency-groups]
dev = [
  "ipdb>=0.13.13",
  "jupyter",
  "pre-commit",
]

 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"

 [tool.hatch.build.targets.wheel]
 packages = ["src/darb_solar"]
